update theme meta

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
- Theme Name:   CardanoPress Bootstrap Child Theme
+ Theme Name:   CardanoPress.io website
  Theme URI:    https://cardanopress.io
- Description:  Child theme for the base Bootstrap theme
+ Description:  Child theme for the CardanoPress.io website
  Author:       CardanoPress
  Author URI:   https://cardanopress.io
  Template:     cardanopress-bootstrap-theme
