--- a/style.css
+++ b/style.css
@@ -13,8 +13,11 @@
 */
 
 /* Global styles */
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap');
 
-
+h1, h2, h3 {
+    font-family: 'Oxygen', sans-serif;
+}
 
 /* Home page */
 #banner .banner{
