--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ h3{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 450px;
-    padding: 4em 0;
+    min-height: 450px;
+    padding: 5em 0;
     color: #333;
 }
 #features{
