--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
 /* Global styles */
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap');
 
+body{
+    color: #333;
+}
 h1, h2, h3 {
     font-family: 'Oxygen', sans-serif;
 }
