--- a/style.css
+++ b/style.css
@@ -67,10 +67,13 @@ h3{
 
 /* Home page */
 #banner {
-    background: url("/wp-content/themes/cardanopress-website/assets/images/header-bg.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+    background-color: #ffffff;
+    background-image: linear-gradient(45deg, #ffffff 0%, #4158D0 27%, #C850C0 51%, #FFCC70 77%, #ffffff 100%);
+
+    /*background: url("/wp-content/themes/cardanopress-website/assets/images/header-bg.jpg");*/
+    /*background-size: cover;*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: center center;*/
     min-height: 450px;
     padding: 5em 0;
     color: #333;
