--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h3{
     /*background-position: center center;*/
     min-height: 450px;
     padding: 5em 0;
-    color: #333;
+    color: white;
 }
 #features{
     padding: 4em 0;
