--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ h3{
 .card {
     box-shadow: 0 20px 27px 0 rgb(0 0 0 / 15%);
 }
-
+.white{
+    color: #fff;
+}
 /* Home page */
 #banner {
     background-color: #ffffff;
