--- a/style.css
+++ b/style.css
@@ -194,6 +194,10 @@ footer li a:hover{
 }
 
 /* BETTERDOCS */
+.betterdocs-search-form-wrap{
+    background-color: #ffffff;
+    background-image: linear-gradient(45deg, #ffffff 0%, #4158D0 27%, #C850C0 51%, #FFCC70 77%, #ffffff 100%);
+}
 .betterdocs-credit{
     display: none;
     visibility: hidden;
