--- a/style.css
+++ b/style.css
@@ -197,6 +197,8 @@ footer li a:hover{
 .betterdocs-search-form-wrap{
     background-color: #ffffff;
     background-image: linear-gradient(45deg, #ffffff 0%, #4158D0 27%, #C850C0 51%, #FFCC70 77%, #ffffff 100%);
+    background-size: 200% 200%;
+    animation: gradient 15s ease infinite;
 }
 .betterdocs-credit{
     display: none;
